# rag_evaluation

./: README.md  base_rag_evalutor.py  dify_rag_evaluator.py  evaluation_results1.xlsx  evaluation_results2.xlsx  lightrag_evalutor.py  lightrag_retrieve_context.txt  llm_evaluator.py  logger_config.py  main.py  metrics_plot.py  ollama_client.py  pyproject.toml  qa1 - 副本.xlsx  qa1.xlsx  qa2.xlsx  settings copy.toml  settings.toml  ~$qa2.xlsx
